<resources>
    <string name="APP_NAME" translatable="false">LocalLoop</string>
    <string name="EXPLORE">Explore</string>
    <string name="PROFILE">Profile</string>
    <string name="NOTIFICATIONS">Notifications</string>
    <string name="AD_IMAGE">Advertisement Image</string>
    <string name="AD_TITLE">Advertisement Title</string>
    <string name="AD_DESCRIPTION">Advertisement Description</string>
    <string name="FAVORITE_ICON">Favorite Icon</string>
    <string name="MAKE_PROPOSAL">Make a Proposal</string>
    <string name="SEARCH_HERE">Search here…</string>
    <string name="ADVERTISEMENT">Advertisement</string>
    <string name="ADVERTISEMENT_NAME">Advertisement Name</string>
    <string name="DESCRIPTION">Description</string>
    <string name="CREATED_BY_USER_AT">Created by %1$s at %2$s</string>
    <string name="USER_ICON">User Icon</string>
    <string name="ACCOUNT_CREATED_IN">Account created in %1$s</string>
    <string name="VIEW_YOUR_PROPOSAL">View your Proposal</string>
    <string name="NO_REVIEWS">No reviews</string>
    <string name="INVENTORY">Inventory</string>
    <string name="USERNAME">Username</string>
    <string name="PASSWORD">Password</string>
    <string name="DONT_HAVE_AN_ACCOUNT_SIGN_UP">Don\'t have an account? Sign Up</string>
    <string name="ALREADY_HAVE_AN_ACCOUNT_LOG_IN">Already have an account? Log In</string>
    <string name="LOGIN">Login</string>
    <string name="SIGN_UP">Sign Up</string>
    <string name="THE_FIELD_CANT_BE_EMPTY">The %1$s can\'t be empty!</string>
    <string name="EMAIL" translatable="false">Email</string>
    <string name="INVALID_EMAIL">Invalid Email</string>
    <string name="ITEM_IMAGE">Item Image</string>
    <string name="SELECTED">Selected</string>
    <string name="ENTER_YOUR_MESSAGE">Enter your message</string>
    <string name="CLOSE">Close</string>
    <string name="ADD_TO_CART">Add to Cart</string>
    <string name="SEND_PROPOSAL">Send Proposal</string>
    <string name="PLEASE_SELECT_AT_LEAST_ONE_ITEM">Please select at least one item.</string>
    <string name="CONFIRM_PROPOSAL_SEND">Confirm Proposal Send</string>
    <string name="ARE_YOU_SURE_YOU_WANT_TO_SEND_THIS_PROPOSAL">Are you sure you want to send this proposal?</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="PROPOSAL_SENT">Proposal sent!</string>
    <string name="ERROR">Error</string>
    <string name="ADD">Add</string>
    <string name="ADD_NEW_ADVERTISEMENT">Add new Advertisement</string>
    <string name="CREATE_ADVERTISEMENT">Create advertisement</string>
    <string name="FAILED_TO_FETCH">Failed to fetch %1$s</string>
    <string name="FAILED_TO_CREATE">Failed to create %1$s</string>
    <string name="THE_ADVERTISEMENT">The Advertisement</string>
    <string name="THE_ADVERTISEMENTS">The Advertisements</string>
    <string name="USER_IMAGE">User Image</string>
    <string name="SENT_TRADES">Sent Trades</string>
    <string name="RECEIVED_TRADES">Received Trades</string>
    <string name="REPORT_ADVERTISEMENT">Report Advertisement</string>
    <string name="REPORT_COMMENT">reportComment</string>
    <string name="SUBMIT">reportSubmit</string>
    <string name="REPORT_SUBMITTED">reportSubmitted</string>
    <string name="PLEASE_ADD_COMMENT">reportCommentAdd</string>
    <string name="CANCEL">reportCancel</string>
    <string name="TRADE">Trade</string>
    <string name="ACCEPT_TRADE">Accept Trade</string>
    <string name="REJECT_TRADE">Reject Trade</string>
    <string name="PENDING">Pending</string>
    <string name="REJECTED">Rejected</string>
    <string name="ACCEPTED">Accepted</string>
    <string name="REMOVE_FROM_CART">Remove from Cart</string>
    <string name="SIGN_OUT">Sign Out</string>
</resources>