<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.localloop.ui.home.HomeFragment"
        android:label="@string/EXPLORE"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_navigation_home_to_navigation_advertisement"
            app:destination="@id/navigation_advertisement"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_advertisement"
        android:name="com.localloop.ui.advertisement.AdvertisementFragment"
        android:label="@string/ADVERTISEMENT"
        tools:layout="@layout/fragment_advertisement">

        <argument
            android:name="ADVERTISEMENT_ID"
            app:argType="string" />

        <action
            android:id="@+id/action_navigation_advertisement_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />

        <action
            android:id="@+id/action_navigation_advertisement_to_navigation_make_proposal"
            app:destination="@id/navigation_make_proposal"
            app:enterAnim="@anim/slide_in_up"
            app:exitAnim="@anim/slide_out_down"
            app:popEnterAnim="@anim/slide_in_down"
            app:popExitAnim="@anim/slide_out_up" />
    </fragment>

    <fragment
        android:id="@+id/navigation_make_proposal"
        android:name="com.localloop.ui.proposal.MakeProposalFragment"
        android:label="@string/MAKE_PROPOSAL"
        tools:layout="@layout/fragment_make_proposal" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.localloop.ui.profile.ProfileFragment"
        android:label="@string/PROFILE"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.localloop.ui.notifications.NotificationsFragment"
        android:label="@string/NOTIFICATIONS"
        tools:layout="@layout/fragment_notifications" />
</navigation>
