<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:backgroundTint="?attr/colorSurface"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/AD_IMAGE"
            android:scaleType="centerCrop"
            android:src="@drawable/place_holder_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_card_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:paddingTop="8dp"
                    android:text="@string/AD_TITLE"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_card_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:paddingTop="4dp"
                    android:text="@string/AD_DESCRIPTION"
                    android:textSize="12sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/favorite_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/FAVORITE_ICON"
                android:src="@drawable/baseline_favorite_border_24" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
